--- a/package.json
+++ b/package.json
@@ -78,5 +78,9 @@
     "webpack-dev-middleware": "1.5.1",
     "webpack-hot-middleware": "2.10.0"
   },
+  "dependencies": {
+    "jquery": "^2.2.3",
+    "moment": "^2.12.0"
+  },
   "license": "MIT"
 }
