Update scss-lint config

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -6,3 +6,12 @@ linters:
   StringQuotes:
     enabled: true
     style: double_quotes
+
+  NestingDepth:
+    enabled: true
+    max_depth: 4
+    ignore_parent_selectors: false
+
+  SelectorDepth:
+    enabled: true
+    max_depth: 4
