--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "compression": "1.6.1",
     "del": "2.2.0",
     "express": "4.13.4",
-    "gulp": "3.9.1",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "3.1.0",
     "gulp-changed": "1.3.0",
     "gulp-cssnano": "2.1.1",
@@ -78,9 +78,9 @@
     "webpack-dev-middleware": "1.5.1",
     "webpack-hot-middleware": "2.10.0"
   },
+  "license": "MIT",
   "dependencies": {
-    "jquery": "^2.2.3",
-    "moment": "^2.12.0"
-  },
-  "license": "MIT"
+    "jquery": "^3.1.1",
+    "moment": "^2.15.1"
+  }
 }
