--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/joshukraine/middleman-gulp#readme",
   "devDependencies": {
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.2",
     "gulp-imagemin": "^3.0.3"
