--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.2",
-    "gulp-imagemin": "^3.0.3"
+    "gulp-imagemin": "^3.0.3",
+    "gulp-sass": "^2.3.2"
   }
 }
