--- a/package.json
+++ b/package.json
@@ -20,10 +20,17 @@
   },
   "homepage": "https://github.com/joshukraine/middleman-gulp#readme",
   "devDependencies": {
+    "browserify": "^13.1.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.2",
     "gulp-imagemin": "^3.0.3",
-    "gulp-sass": "^2.3.2"
+    "gulp-sass": "^2.3.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "jquery": "^3.1.1",
+    "moment": "^2.15.1"
   }
 }
