--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/joshukraine/middleman-gulp#readme",
   "devDependencies": {
+    "browser-sync": "^2.17.1",
     "browserify": "^13.1.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
