--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "browserify": "^13.1.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-changed": "^1.3.2",
     "gulp-cssnano": "^2.1.2",
     "gulp-imagemin": "^3.0.3",
