--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-changed": "^1.3.2",
     "gulp-cssnano": "^2.1.2",
+    "gulp-environments": "^0.1.1",
     "gulp-imagemin": "^3.0.3",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
