:wrench: Minify javascript in production.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "gulp-imagemin": "^3.0.3",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-strip-debug": "^1.1.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
