--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-changed": "^1.3.2",
-    "gulp-cssnano": "^2.1.2",
+    "gulp-clean-css": "^2.0.13",
     "gulp-environments": "^0.1.1",
     "gulp-imagemin": "^3.0.3",
     "gulp-sass": "^2.3.2",
