--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-clean-css": "^2.0.13",
     "gulp-environments": "^0.1.1",
     "gulp-imagemin": "^3.0.3",
+    "gulp-load-plugins": "^1.3.0",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-strip-debug": "^1.1.0",
