--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-imagemin": "^3.0.3",
     "gulp-load-plugins": "^1.3.0",
     "gulp-sass": "^2.3.2",
+    "gulp-sizereport": "^1.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^2.0.0",
