--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 node_js:
   - "5"
 
+env:
+  - NODE_ENV=production
+
 before_install:
   - rvm install 2.3.1
 
@@ -10,6 +13,8 @@ install:
   - npm install -g lodash marked varstream svgicons2svgfont node-gyp ttf2woff2
   - npm install -g gulp
   - npm install
+
+before_script: bin/rspec
 
 script: bundle exec middleman build --clean
 
