--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "jquery": "^3.1.1",
-    "moment": "^2.15.1"
+    "moment": "^2.15.1",
+    "webfontloader": "^1.6.26"
   }
 }
