--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "middleman-gulp",
-  "version": "2.2.0",
+  "version": "2.2.2",
   "description": "A Middleman 4 template using Gulp.js",
   "author": "Joshua Steele <joshukraine@gmail.com>",
   "homepage": "https://jsua.co/mm-gulp",
@@ -21,6 +21,8 @@
     "production": "NODE_ENV=production gulp production"
   },
   "devDependencies": {
+    "bourbon": "^5.0.0-beta.7",
+    "bourbon-neat": "^2.0.0",
     "browser-sync": "^2.18.12",
     "browserify": "^14.0.0",
     "del": "^2.2.2",
