--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-environments": "^0.1.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-load-plugins": "^1.5.0",
+    "gulp-noop": "^1.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-sizereport": "^1.2.0",
     "gulp-sourcemaps": "^2.6.1",
