--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "middleman-gulp",
-  "version": "2.3.2",
+  "version": "2.3.5",
   "description": "A Middleman 4 template using Gulp.js",
   "author": "Joshua Steele <joshukraine@gmail.com>",
   "homepage": "https://jsua.co/mm-gulp",
@@ -21,34 +21,34 @@
     "production": "NODE_ENV=production gulp production"
   },
   "devDependencies": {
-    "bourbon": "^5.0.0-beta.8",
+    "bourbon": "^5.0.0",
     "bourbon-neat": "^2.1.0",
-    "browser-sync": "^2.18.13",
+    "browser-sync": "^2.23.6",
     "browserify": "^16.2.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
-    "gulp-changed": "^3.1.0",
-    "gulp-clean-css": "^3.9.0",
+    "gulp-changed": "^3.2.0",
+    "gulp-clean-css": "^3.9.3",
     "gulp-environments": "^0.1.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-noop": "^1.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-sizereport": "^1.2.0",
-    "gulp-sourcemaps": "^2.6.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-strip-debug": "^3.0.0",
     "gulp-uglify": "^3.0.0",
-    "run-sequence": "^2.2.0",
-    "vinyl-buffer": "^1.0.0",
+    "run-sequence": "^2.2.1",
+    "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
-    "jquery": "^3.2.1",
-    "moment": "^2.18.1",
+    "jquery": "^3.3.1",
+    "moment": "^2.22.1",
     "webfontloader": "^1.6.27"
   },
   "engines": {
-    "node": ">= 6.9.4"
+    "node": ">= 8.11.1"
   }
 }
